Fix up card styling. - Added a dividing to make it easier to read cards - Worked on alignment of title and content for same reason. - Added styling to tips section. - Added footer

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,8 +1,29 @@
 .App {
-  margin: 0 auto;
+  margin: 4vh auto;
   font-family: "Roboto", sans-serif;
+  font-size: 62.5%;
+  max-width: 100vh;
+  width: 100%;
+}
+
+.App h1,
+.App h2,
+.App h3 {
+  font-family: "Sedgwick Ave Display", cursive;
 }
 
 .App h1 {
-  font-family: "Sedgwick Ave Display", cursive;
+  font-size: 2.4rem;
+}
+
+.App h2 {
+  font-size: 1.8rem;
+}
+
+.App h3 {
+  font-size: 1.6rem;
+}
+
+.App p {
+  font-size: 1.4rem;
 }
