--- a/app/src/components/Progress/progress.module.css
+++ b/app/src/components/Progress/progress.module.css
@@ -2,78 +2,95 @@
 Look up how to change this to class names to up the specificity. When I tried last, the styles were not applied despite importing just fine. Used class name .progress-view instead of ul */
 /* using snake casing to make ProgressView.js easier to work with */
 .progressView {
-  width: 800px;
+  width: 90%;
   margin: 0 auto;
 }
 
 .progressView h1 {
   display: flex;
-  align-items: center;
   justify-content: center;
-  text-align: center;
-  height: 50px;
+  margin-bottom: 50px;
 }
 
 .soundCard {
   width: 100%;
-  height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   background-color: grey;
-  margin: 10px;
-  padding: 10px 0;
+  margin: 20px 0;
+  padding: 20px 0;
   border-radius: 25px;
 }
 
 /* progress-bar total*/
 .progressBarTotal {
   width: 90%;
-  height: 10px;
+  height: 8px;
   background-color: white;
-  margin: 0;
+  margin: 5px 0 20px 0;
   padding: 0;
   /* x, y, blur/spread, color */
   box-shadow: 5px 5px 5px black;
-  border-radius: 5px;
+  border-radius: 3px;
 }
 
 /* progress bar completed */
 .progressBarCompleted {
   background-color: green;
-  height: 10px;
+  height: 8px;
   width: 30%;
   box-shadow: none;
   /* TL TR BR BL */
-  border-radius: 5px 0px 0px 5px;
+  border-radius: 3px 0px 0px 3px;
 }
 
 /* content section below progress bar */
 .soundContent {
   /* border: 2px dashed red; */
-  width: 100%;
-  margin: 0;
+  width: 90%;
   display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
+  margin-top: 15px;
 }
 
 .soundContent h2 {
   /* border: 2px dashed green; */
-  width: 100%;
+  margin: 0 0 10px 0;
+  /* allows dividing line to extend beyond title */
+  width: 60%;
   /* wrap sound title if too long */
   display: flex;
   flex-wrap: wrap;
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .soundContent p {
   /* border: 2px dashed yellow; */
   width: 100%;
+  flex-grow: 0;
 }
 
 .tipsContainer {
   width: 100%;
+  margin-top: 20px;
+  padding: 10px 2.5%;
+  filter: opacity(25%);
+  background-color: black;
+  border-radius: 5px;
+}
+
+.tipsContainer #tipTitle {
+  font-size: 1.2rem;
+  color: white;
+}
+
+.tipsContainer #tipText {
+  font-size: 1rem;
+  color: white;
 }
